--- a/pealeht.html
+++ b/pealeht.html
@@ -5,7 +5,7 @@
 	<h1>Marie ilutuba<br><br></h1>
 	<div style="display: inline-block;">
 		<div>
-			<h2>Hinnakiri</h2>
+			<h2><a href="file:///C:/Users/Tristan/projekt/t-leht-branch/hinnakiri.html" target="_blank">Hinnakiri</a></h2>
 			<h2>Broneeri aeg</h2>
 		</div>
 		<div>
