--- a/pealeht.html
+++ b/pealeht.html
@@ -3,17 +3,12 @@
 
 <body>
 	<h1>Marie ilutuba<br><br></h1>
-	<div style="display: inline-block;">
-		<div>
-			<h2><a href="file:///C:/Users/Tristan/projekt/t-leht-branch/hinnakiri.html" target="_blank">Hinnakiri</a></h2>
-			<h2>Broneeri aeg</h2>
-		</div>
-		<div>
-			<h2>IG</h2>
-			<h2>F</h2>
-			<h2>T</h2>
-		</div>
-	</div>
+	<h2 style="display: inline-block;"><a href="file:///C:/Users/Tristan/projekt/t-leht-branch/hinnakiri.html"
+			target="_blank">Hinnakiri</a></h2>
+	<h2 style="display: inline-block;">Broneeri aeg</h2>
+	<h2 style="display: inline-block; text-align: right;">IG</h2>
+	<h2 style="display: inline-block; text-align: right;">F</h2>
+	<h2 style="display: inline-block; text-align: right;">T</h2>
 </body>
 
 </html>
