--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
     <h1>PEALKIRI</h1>
     <p>hello text</p>
-</body>
+    <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Italian Trulli" </body>
 
 </html>
