--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
     <h1>PEALKIRI</h1>
     <p>hello text</p>
     <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Italian Trulli" </body>
+    <table>
+        <tr>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Country</th>
+        </tr>
+        <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>Germany</td>
+        </tr>
+        <tr>
+            <td>Centro comercial Moctezuma</td>
+            <td>Francisco Chang</td>
+            <td>Mexico</td>
+        </tr>
+    </table>
 
 </html>
