--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="style.css" </head>
+
 <body>
-    <h1>PEALKIRI</h1>
-    <p>hello text</p>
-    <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Italian Trulli" </body>
-    <table>
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-        </tr>
-        <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-        </tr>
-        <tr>
-            <td>Centro comercial Moctezuma</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-        </tr>
-    </table>
+    <div class="inline-parent">
+        <div class="inline-child">
+            <h1>PEALKIRI</h1>
+            <p>hello text</p>
+            <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Italian Trulli">
+        </div>
+        <div class="inline-child">
+            <table>
+                <tr>
+                    <th>Company</th>
+                    <th>Contact</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>Alfreds Futterkiste</td>
+                    <td>Maria Anders</td>
+                    <td>Germany</td>
+                </tr>
+                <tr>
+                    <td>Centro comercial Moctezuma</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</body>
 
 </html>
